--- a/controllers-iactionresult/Controllers/Properties/launchSettings.json
+++ b/controllers-iactionresult/Controllers/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Controllers": {
+    "Kestrel": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
