--- a/configuration/Configuration/Configuration.csproj
+++ b/configuration/Configuration/Configuration.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f1c74219-1b1b-41cd-a458-29af3fcfde13</UserSecretsId>
   </PropertyGroup>
 
 </Project>
