--- a/stocks-app/StocksApp/StocksApp.csproj
+++ b/stocks-app/StocksApp/StocksApp.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1b13c3c9-88f7-48de-9c96-e10377bca9f8</UserSecretsId>
   </PropertyGroup>
 
 </Project>
