Sort in list view - part 2

--- a/crud-example/CRUDExample/CRUDExample.csproj
+++ b/crud-example/CRUDExample/CRUDExample.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Shared\_IndexPartial.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Views\Shared\_IndexPartial.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="xunit.analyzers" Version="1.1.0" />
   </ItemGroup>
 
