--- a/crud-example/CRUDExample/CRUDExample.csproj
+++ b/crud-example/CRUDExample/CRUDExample.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
     <PackageReference Include="xunit.analyzers" Version="1.1.0" />
   </ItemGroup>
 
